fixed css issue with being too close to post review button

--- a/frontend/src/components/ReviewsComponent/reviews.css
+++ b/frontend/src/components/ReviewsComponent/reviews.css
@@ -15,7 +15,7 @@
    font-size: larger;
    color: black;
    font-weight: bold;
-   margin: 0;
+   margin: 15px 0 0 0;
 }
 
 .monthInfo {
